APPS-491 CSS fix for camera preview on small screens
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@67304 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/scss/dialog-styles.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/dialog-styles.scss
@@ -1205,12 +1205,13 @@ $duration: 0.2s;
 			width: 100%;
 			min-height: 160px;
 			min-width: 213px;
+			max-height: calc(100vh - 320px);
 			position: relative;
 			text-align: center;
 		}
 		button {
-   			color: $mebis-teal-dark !important;	
-   		}
+			color: $mebis-teal-dark !important;	
+		}
 	}
 
 	.MaterialDialogBox.mowPrintPrew {
